Error page 500 completed

--- a/public/404.html
+++ b/public/404.html
@@ -4,11 +4,10 @@
   <title>Yarnlore - Crafting Dreams</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-
   .center {
-    display: flex;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  align-items: center;
+  height: 100vh;
   }
 
   .yarnlore-error-page {
@@ -73,7 +72,7 @@
     <div class="dialog">
       <div>
         <h1>Oops, I couldn't find that.</h1>
-        <img class="error404_img" src="error404.jpg" alt="Cat entangled in yarn">
+        <img class="error404_img" src="error404.jpg" alt="Entangled ball of yarn">
         <p>You might have have entered the wrong information or accessed a page that no longer exists.</p>
       </div>
       <p>Let's un-purl this together.</p>
