--- a/public/500.html
+++ b/public/500.html
@@ -4,40 +4,47 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
+  .center {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  }
+
+  .yarnlore-error500-page {
+    background-color: #C989EB;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .yarnlore-error500-page div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .yarnlore-error500-page div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #8B5FBF solid 4px;
+    border-top: # solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
-    background-color: white;
+    background-color: #FDC5F5;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .yarnlore-error500-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #8B5FBF;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .yarnlore-error500-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -51,16 +58,25 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+
+  .error500_img {
+    margin-top: 10px;
+    border-radius: 10px;
+  }
+
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="yarnlore-error500-page">
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+  <div class="center">
+    <div class="dialog">
+      <div>
+        <h1>Oh no, something went wrong.</h1>
+        <img class="error500_img" src="error500.jpg" alt="Cat entangled in yarn">
+      </div>
+      <p>An error occured while loading this page. We apologize for this inconvenience.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
