Fixed minor bugs with error 500 page.

--- a/public/500.html
+++ b/public/500.html
@@ -30,7 +30,6 @@
     border-left-color: #999;
     border-bottom-color: #BBB;
     border-top: #8B5FBF solid 4px;
-    border-top: # solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: #FDC5F5;
@@ -60,10 +59,10 @@
   }
 
   .error500_img {
-    margin-top: 10px;
+    margin: 10px;
+    margin-bottom: 20px;
     border-radius: 10px;
   }
-
   </style>
 </head>
 
@@ -73,7 +72,7 @@
     <div class="dialog">
       <div>
         <h1>Oh no, something went wrong.</h1>
-        <img class="error500_img" src="error500.jpg" alt="Cat entangled in yarn">
+        <img class="error500_img" src="error500.jpg" alt="Entangled ball of yarn">
       </div>
       <p>An error occured while loading this page. We apologize for this inconvenience.</p>
     </div>
