--- a/public/404.html
+++ b/public/404.html
@@ -59,10 +59,10 @@
   }
 
   .error404_img {
-    margin-top: 10px;
+    margin: 10px;
+    margin-bottom: 20px;
     border-radius: 10px;
   }
-
   </style>
 </head>
 
@@ -72,7 +72,7 @@
     <div class="dialog">
       <div>
         <h1>Oops, I couldn't find that.</h1>
-        <img class="error404_img" src="error404.jpg" alt="Entangled ball of yarn">
+        <img class="error404_img" src="error404.jpg" alt="Cat entangled in yarn">
         <p>You might have have entered the wrong information or accessed a page that no longer exists.</p>
       </div>
       <p>Let's un-purl this together.</p>
