Resolved the error images page issues

--- a/public/404.html
+++ b/public/404.html
@@ -72,7 +72,7 @@
     <div class="dialog">
       <div>
         <h1>Oops, I couldn't find that.</h1>
-        <img class="error404_img" src="error404.jpg" alt="Cat entangled in yarn">
+        <img class="error404_img" src="/error404.jpg" alt="Cat entangled in yarn">
         <p>You might have have entered the wrong information or accessed a page that no longer exists.</p>
       </div>
       <p>Let's un-purl this together.</p>
