--- a/public/500.html
+++ b/public/500.html
@@ -72,7 +72,7 @@
     <div class="dialog">
       <div>
         <h1>Oh no, something went wrong.</h1>
-        <img class="error500_img" src="error500.jpg" alt="Entangled ball of yarn">
+        <img class="error500_img" src="/error500.jpg" alt="Entangled ball of yarn">
       </div>
       <p>An error occured while loading this page. We apologize for this inconvenience.</p>
     </div>
